@@ -1537,6 +1537,7 @@ public abstract class SharkPackageValidator extends StandardPackageValidator {
       FormalParameter res = fps.getFormalParameter(SharkConstants.TOOL_AGENT_FORMAL_PARAMETER_RESULT_SL);
       FormalParameter cfp = fps.getFormalParameter(SharkConstants.TOOL_AGENT_FORMAL_PARAMETER_CALCULATION_FILEPATH);
       FormalParameter cotmplfp = fps.getFormalParameter(SharkConstants.TOOL_AGENT_FORMAL_PARAMETER_CALCULATION_OUTPUT_TEMPLATE_FILEPATH);
+      FormalParameter variables = fps.getFormalParameter(SharkConstants.TOOL_AGENT_FORMAL_PARAMETER_VARIABLES);
       if (src == null || res == null || cfp == null || cotmplfp == null) {
          XMLValidationError verr = new XMLValidationError(XMLValidationError.TYPE_ERROR,
                                                           XMLValidationError.SUB_TYPE_LOGIC,
@@ -1582,6 +1583,16 @@ public abstract class SharkPackageValidator extends StandardPackageValidator {
                         SharkValidationErrorIds.ERROR_TOOL_AGENT_INVALID_FORMAL_PARAMETER_MODE_IN_REQUIRED,
                         existingErrors);
       handleFPDataTypeError(cotmplfp,
+                            BasicType.class,
+                            XPDLConstants.BASIC_TYPE_STRING,
+                            false,
+                            SharkValidationErrorIds.ERROR_TOOL_AGENT_INVALID_PARAMETER_TYPE_BASIC_TYPE_STRING_REQUIRED,
+                            existingErrors);
+      handleFPModeError(variables,
+                        XPDLConstants.FORMAL_PARAMETER_MODE_OUT,
+                        SharkValidationErrorIds.ERROR_TOOL_AGENT_INVALID_FORMAL_PARAMETER_MODE_IN_REQUIRED,
+                        existingErrors);
+      handleFPDataTypeError(variables,
                             BasicType.class,
                             XPDLConstants.BASIC_TYPE_STRING,
                             false,
